[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools_scm>=8",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.coverage.run]
branch = true
source = ['sqliteschema']

[tool.coverage.report]
exclude_lines = [
  'except ImportError',
  'raise NotImplementedError',
  'pass',
  'ABCmeta',
  'abstractmethod',
  'warnings.warn',
]
precision = 1
show_missing = true

[tool.isort]
include_trailing_comma = true
known_third_party = [
  'mbstrdecoder',
  'simplesqlite',
  'tabledata',
  'pytest',
]
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
  '*/.eggs/*',
  '*/.pytype/*',
  '*/.tox/*',
]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".tox",
    ".venv",
    "_build",
    "_sandbox",
    "build",
    "dist"
]
pythonVersion = "3.9"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".eggs/",
    ".tox/",
    "_sandbox/*",
    "build/",
    "docs/conf.py",
]
